--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 </head>
 
 <body>
-  <nav class = "navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <span class="navbar-brand mb-0 h1 w-100 text-center">Weather Dashboard</span>
   </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-6 bg-light">
+        <span class="search-header">Search for a city here:</span>
+      </div>
+    </div>
+  </div>
 
 </body>
 <script src="./assets/js/script.js"></script>
