--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
   <div class="container">
     <div class="row">
       <div class="col-6 bg-light">
-        <span class="search-header">Search for a city here:</span>
+        <p class="search-header">Search for a city here:</p>
+        <div class="mb-3">
+          <input id="input-city" type="text" class="form-control" placeholder="Insert city name" aria-label="Insert city name">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="button" id="button-search">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
