added elements and fixed html

--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
       <div class="col-6 bg-light">
         <p class="search-header">Search for a city here:</p>
         <div class="mb-3">
-          <input id="input-city" type="text" class="form-control" placeholder="Insert city name" aria-label="Insert city name">
+          <input id="input-city" type="text" class="form-control" placeholder="Insert city name"
+            aria-label="Insert city name">
           <div class="input-group-append">
             <button class="btn btn-primary" type="button" id="button-search">
               <i class="fas fa-search"></i>
             </button>
           </div>
         </div>
+        <button class="btn btn-primary" id="clear-history" type="button">Clear search history</button>
+        <form id="search-history"></form>
       </div>
+      
     </div>
   </div>
 
