--- a/index.html
+++ b/index.html
@@ -22,19 +22,35 @@
           <input id="input-city" type="text" class="form-control" placeholder="Insert city name"
             aria-label="Insert city name">
           <div class="input-group-append">
-            <button class="btn btn-primary" type="button" id="button-search">
-              <i class="fas fa-search"></i>
+            <button class="btn btn-primary align-middle" type="button" id="button-search">
+              <i class="fas fa-search">Search for a city</i>
             </button>
           </div>
         </div>
         <button class="btn btn-primary" id="clear-history" type="button">Clear search history</button>
         <form id="search-history"></form>
       </div>
-      
+      <div class="col-6">
+        <div class="row">
+          <div class="col-12 border m-3 rounded">
+            <div class="row">
+              <div class="col-12">
+                <span id="city-name" class="align-middle"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h3>Five-Day Forecast</h3>
+        </div>
+      </div>
     </div>
   </div>
 
 </body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./assets/js/script.js"></script>
 
 </html>
